Bug 395964 - "Try Again" shouldn't clear the password
Summary: "Try Again" shouldn't clear the password
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-28 13:32 UTC by Christophe Marin
Modified: 2018-07-05 08:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2018-06-28 13:32:44 UTC
This is bugging me since ages, it was time to write a report.

When logging on an imap server fails for any reason and the user clicks on the "Try Again" button, he's presented a window asking for the account password.

The password field is empty. It shouldn't. Failed login doesn't necessarily means the password is wrong. (users of the yahoo server have imap issues *very* often)
Comment 1 Daniel Vrátil 2018-07-05 08:01:07 UTC
Git commit df9e0b2b68f9d07059514152e665793aa36060d7 by Daniel Vrátil.
Committed on 30/06/2018 at 15:16.
Pushed by dvratil into branch 'Applications/18.04'.

IMAP: pre-fill current password in the password dialog
FIXED-IN: 5.8.3

M  +1    -0    resources/imap/settingspasswordrequester.cpp

https://commits.kde.org/kdepim-runtime/df9e0b2b68f9d07059514152e665793aa36060d7