IMAP: pre-fill current password in the password dialog

BUG: 395964
FIXED-IN: 5.8.3