resources/imap/settingspasswordrequester.cpp
@@ -168,6 +168,7 @@ QString SettingsPasswordRequester::requestManualAuth(bool *userRejected)
     dlg->setModal(true);
     dlg->setPrompt(i18n("Please enter password for user '%1' on IMAP server '%2'.",
                         m_resource->settings()->userName(), m_resource->settings()->imapServer()));
+    dlg->setPassword(m_resource->settings()->password());
     if (dlg->exec()) {
         if (userRejected) {
             *userRejected = false;
